@@ -1,0 +1,7 @@
+int fs_exec(int ino)
+{
+ void *src = 0;
+ if (ino)
+   src = (void*)0xe000;
+ goto *src;
+}
